CSS::Sass (0.6.0)

  * Add Sass functions implemented in Perl.

 -- David Caldwell <david@porkrind.org>  Sat, 22 Jun 2013 13:10:04 -0700

CSS::Sass (0.5.0)

  * Fix build issue on OpenSolaris.
  * Fix include path issue on Windows.
  * Fix XS loading issue on older Perls.

 -- David Caldwell <david@porkrind.org>  Fri, 21 Jun 2013 10:58:42 -0700

CSS::Sass (0.4.0)

  * Fix building on Mac OS X 10.7.
  * Update to latest libsass code.

 -- David Caldwell <david@porkrind.org>  Mon, 17 Jun 2013 11:01:50 -0700

CSS::Sass (0.3.0)

  * Fix building on Linux/GCC.
  * Stop including Makefile.PL.

 -- David Caldwell <david@porkrind.org>  Mon, 17 Jun 2013 01:45:45 -0700

CSS::Sass (0.2.0)

  * Don't try to pass clang options to non-clang compilers.

 -- David Caldwell <david@porkrind.org>  Sat, 15 Jun 2013 03:14:37 -0700

CSS::Sass (0.1.0)

  * Rename module.

 -- David Caldwell <david@porkrind.org>  Wed, 29 May 2013 23:59:30 -0700

Text::Sass::XS (0.1.0)

  * Initial release.

 -- David Caldwell <david@porkrind.org>  Wed, 29 May 2013 19:23:13 -0700