@@ -29,7 +29,7 @@
    "provides" : {
       "CSS::Sass" : {
          "file" : "lib/CSS/Sass.pm",
-         "version" : "v0.6.0"
+         "version" : "v0.7.0"
       },
       "CSS::Sass::Type" : {
          "file" : "lib/CSS/Sass/Type.pm"
@@ -65,5 +65,5 @@
          "http://dev.perl.org/licenses/"
       ]
    },
-   "version" : "v0.6.0"
+   "version" : "v0.7.0"
 }
