@@ -1,3 +1,10 @@
+CSS::Sass (0.7.0)
+
+  * Fix Sass functions so that you may have more than 1 at a time (Dan
+    Thomas).
+
+ -- David Caldwell <david@porkrind.org>  Tue, 13 Aug 2013 11:08:34 -0700
+
 CSS::Sass (0.6.0)
 
   * Add Sass functions implemented in Perl.
